--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,7 @@
         <% @book.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
+        <% end %>
       </ul>
       <h2>User info</h2>
       <%= render 'info', user: current_user %>
