--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,6 @@
 <p id ="notice"></p>
 <div class='container px-5 px-sm-0'>
+  <%= render 'layouts/errors', obj: @book %>
   <div class='row'>
     <div class='col-md-3'>
 
