--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,22 +12,63 @@
   		<table class='table'>
   		  <tr>
           <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+            <%= image_tag @book.user.get_profile_image(100,100) %><br>
             <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <% if @book.user == current_user %>
 
+          <td>
+           <% if@book.favorited_by?(current_user) %>
+              <p>
+                <%= link_to book_favorites_path(@book),class:'text-danger', method: :delete do %>
+                  ♥<%= @book.favorites.count %>
+                <% end %>
+              </p>
+              <% else %>
+              <p>
+                <%= link_to book_favorites_path(@book), method: :post do %>
+                  ♡<%= @book.favorites.count %>
+            <% end %>
+              </p>
+           <% end %>
+           <td><p>コメント件数：<%= @book.book_comments.count %></p></td>
+          </td>
+
+          <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+
           <% else %>
             <td></td>
             <td></td>
+
           <% end %>
-        </tr>
-      </table>
+
+        </table>
+
+        <% @book.book_comments.each do |book_comment| %>
+          <div>
+           <%= link_to(book_comment.user) do %>
+           <%= image_tag book_comment.user.get_profile_image(100,100) %>
+           <% end %>
+
+          <%= book_comment.book_comment %>
+           <% if book_comment.user == current_user %>
+          <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
+          <% end %>
+
+          </div>
+          <%=link_to book_comment.user.name, user_path(book_comment.user.id) %>
+          <% end %>
+
+           <tr>
+            <%= form_with model: [@book,@book_comment] do |f| %>
+              <%= f.text_area :book_comment, size:"80x10" %>
+              <%= f.submit "送信" %>
+            <% end %>
+            </tr>
     </div>
   </div>
 </div>
