--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -33,10 +33,7 @@
         </td>
 
         <td>
-          <p>コメント件数：<%= book.book_comments.count %></p>
-
-
-
+          コメント件数：<%= book.book_comments.count %>
         </td>
 
       </tr>
