--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,6 +4,7 @@
       <h2>User info</h2>
 
       <%= render 'users/info',user: @book.user %>
+      
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book_new %>
     </div>
@@ -13,11 +14,11 @@
   		  <tr>
           <td><%= link_to(@book.user) do %>
             <%= image_tag @book.user.get_profile_image(100,100) %><br>
-            <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <td><%= follows %></td>
 
           <td>
            <% if@book.favorited_by?(current_user) %>
