--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,7 +11,19 @@
       <tr>
         <td><%= image_tag user.get_profile_image(50,50) %></td>
         <td><%= user.name %></td>
-        <td><%= link_to 'Show', user, class: "user_#{user.id}" %></td>
+        <td>フォロー数：<%= user.followings.count %></td>
+        <td>フォロワー数：<%= user.followers.count %></td>
+
+        <td><% if current_user %>
+        <% if user.follower?(current_user) %>
+            <p><%=link_to "フォロー外す", user_relationships_path(user.id), method: :delete %></p>
+        <% else %>
+            <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
+        <% end %>
+        </td>
+
+<% end %>
+        <td><%= link_to 'Show', user_path(user) %></td>
       </tr>
     <% end %>
   </tbody>
