--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,11 +4,12 @@
       <h2>User info</h2>
 
       <%= render 'users/info',user: @book.user %>
-      
+
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book_new %>
     </div>
     <div class='col-md-8 offset-md-1'>
+      <%= render 'searches/search',book: @book %>
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
