--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,6 +17,7 @@
       <%= render 'books/form', book: @book %>
     </div>
     <div class='col-md-8 offset-md-1'>
+      <%= render 'searches/search',users: @users %>
       <h2>Users</h2>
       <%= render 'index',users: @users %>
     </div>
