--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model:book,local:true do |f| %>
+<%= form_with model:book,local:false do |f| %>
 <%= render 'layouts/errors', obj: @book %>
 
   <div class="form-group">
